[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "WombatPyKIPR"
version = "1.0.0"
authors = [{ name = "Grayson Elias", email = "git@graysone.com" }]
description = "Provides the KIPR import for python on the wombat"
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/Dead-Robots/WombatPyKIPR"
"Bug Tracker" = "https://github.com/Dead-Robots/WombatPyKIPR/issues"
